fix post width on mobile

--- a/src/components/Layout/globals.css
+++ b/src/components/Layout/globals.css
@@ -130,7 +130,7 @@ ol {
   margin: 0.5em 0em 0.5em 0em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 768px) {
   .box {
     margin: 0.5em 1em 0.5em 1em;
   }
